# lab3_assignment1

./: CMakeLists.txt  Makefile  lab3_assignment1.c  lab3_assignment1.ld
.cache/clangd/index/: assignment1.c.2BFA97F9209927DE.idx  pwm_led.c.6499AC323FD8C009.idx  startup_gcc.c.6856EC2F28BD5592.idx  startup_gcc.c.ACF70952E3C2C6F2.idx
gcc/: buttons.d  lab3_assignment1.d  pinout.d  startup_gcc.d  stopwatch.d  uart.d  uartstdio.d
include/: stopwatch.c  stopwatch.h  uart.c  uart.h
